# python-course

./: .gitignore  .python-version  README.md  pyproject.toml  python-course.code-workspace  requirements.txt  token.txt
Section-02/: billCalculator.py  operators.py  primitive_dataypes.py  typeError.py
Section-03/: conditionals.py  even_odd.py  game.py  pizza.py  ticket.py
Section-05/: fizzbuzz.py  loops.py  max_value.py  password_generator.py  sum_gaus.py
Section-06/: buildFunctions.py
Section-07/: hangman.py  hangman_art.py
Section-08/: LifeinWeeks.py  LoveCalculator.py  caesarcipher.py  caesarcipher_v1.py  inputFunctions.py
Section-09/: GradingProgram.py  bid.py  nesting.py
Section-10/: LeapYear.py  inquirer_input.py  names.py
Section-100/: Fatal_Force.ipynb  readme.md
Section-11/: blackjack.py
Section-12/: prime-number.py
Section-13/: debug.py  dice_images.py  oddEven.py
Section-14/: art.py  game_data.py  highLower.py
Section-15/: readme.md  solution.py
Section-16/: import_module.py  lesson.py  main.py  readme.md
Section-17/: main.py  readm.md
Section-18/: geometry.py  main.py  randomShape.py  readme.md  spiorograph.py
Section-19/: main.py  readme.md
Section-20/: main.py  readme.md  snake.py
Section-21/: constants.py  food.py  main.py  readme.md  scoreboard.py  snake.py
Section-22/: ball.py  constants.py  main.py  paddle.py  readme.md
Section-23/: car_manager.py  main.py  player.py
Section-25/: main.py  readme.md
Section-26/: dict-omprehension-1.py  dict-omprehension-2.py  filter.py  main.py  pandas-loop.py  readme.md  (+1 more)
(+240 files in other folders)
