[project]
name = "python-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iso3166>=2.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "seaborn>=0.13.2",
]
